--- a/i18n/template-en.pot
+++ b/i18n/template-en.pot
@@ -145,9 +145,6 @@ msgstr ""
 msgid "Active meetings"
 msgstr ""
 
-msgid "Active users"
-msgstr ""
-
 msgid "Add"
 msgstr ""
 
@@ -211,6 +208,9 @@ msgid "Administrators"
 msgstr ""
 
 msgid "After verifiy the preview click on \"import\" please (see top right)."
+msgstr ""
+
+msgid "After verifying the preview click on \"import\" please (see top right)."
 msgstr ""
 
 msgid "Agenda"
@@ -459,6 +459,9 @@ msgstr ""
 msgid "Are you sure you want to delete this projector?"
 msgstr ""
 
+msgid "Are you sure you want to delete this state?"
+msgstr ""
+
 msgid "Are you sure you want to delete this statute paragraph?"
 msgstr ""
 
@@ -485,6 +488,9 @@ msgid ""
 "participants?"
 msgstr ""
 
+msgid "Are you sure you want to irrevocably remove your point of order?"
+msgstr ""
+
 msgid "Are you sure you want to number all agenda items?"
 msgstr ""
 
@@ -500,6 +506,9 @@ msgid "Are you sure you want to remove this entry from the agenda?"
 msgstr ""
 
 msgid "Are you sure you want to remove this motion from motion block?"
+msgstr ""
+
+msgid "Are you sure you want to remove this participant?"
 msgstr ""
 
 msgid "Are you sure you want to remove this speaker from the list of speakers?"
@@ -565,6 +574,9 @@ msgid ""
 "Attention: Accounts will add to the default group of each meeting only. If "
 "another group is intended please use the 'Add to meetings' dialog in account "
 "detail view."
+msgstr ""
+
+msgid "Attention: First enter the wifi data in [Settings > General]"
 msgstr ""
 
 msgid "Attention: This action cannot be undone!"
@@ -823,6 +835,9 @@ msgid ""
 "Can nominate other participants as candidates. \n"
 "\n"
 "Requires group permission: [Can see participants]"
+msgstr ""
+
+msgid "Can not import because of errors"
 msgstr ""
 
 msgid "Can put oneself on the list of speakers"
@@ -1100,6 +1115,9 @@ msgstr ""
 msgid "Click here to vote!"
 msgstr ""
 
+msgid "Close"
+msgstr ""
+
 msgid "Close list of speakers"
 msgstr ""
 
@@ -1214,10 +1232,10 @@ msgstr ""
 msgid "Copy report to clipboard"
 msgstr ""
 
-msgid "Count active users"
+msgid "Count completed requests to speak"
 msgstr ""
 
-msgid "Count completed requests to speak"
+msgid "Count logged-in users"
 msgstr ""
 
 msgid "Countdown"
@@ -1471,6 +1489,9 @@ msgstr ""
 msgid "Disabled (no percents)"
 msgstr ""
 
+msgid "Disallow new point of order when list of speakers is closed"
+msgstr ""
+
 msgid "Display type"
 msgstr ""
 
@@ -1535,6 +1556,9 @@ msgid "Duplicates"
 msgstr ""
 
 msgid "Duration"
+msgstr ""
+
+msgid "Duration in minutes"
 msgstr ""
 
 msgid "Duration of all requests to speak"
@@ -2105,6 +2129,13 @@ msgstr ""
 msgid "I know the risk"
 msgstr ""
 
+msgid ""
+"IMPORTANT: The sender address (noreply@openslides.com) is defined in the "
+"OpenSlides server settings and cannot be changed here. \n"
+"                            To receive replies you have to enter a reply "
+"address in the next field. Please test the email dispatch in case of changes!"
+msgstr ""
+
 msgid "Identifier"
 msgstr ""
 
@@ -2140,6 +2171,9 @@ msgstr ""
 msgid "Import statute"
 msgstr ""
 
+msgid "Import successful"
+msgstr ""
+
 msgid "Import topics"
 msgstr ""
 
@@ -2149,7 +2183,7 @@ msgstr ""
 msgid "In motion list, motion detail and PDF."
 msgstr ""
 
-msgid "In progress, please wait..."
+msgid "In progress, please wait ..."
 msgstr ""
 
 msgid "In the election process"
@@ -2426,6 +2460,9 @@ msgid "Livestream poster image url"
 msgstr ""
 
 msgid "Loading data. Please wait ..."
+msgstr ""
+
+msgid "Logged-in users"
 msgstr ""
 
 msgid "Login"
@@ -3340,6 +3377,9 @@ msgstr ""
 msgid "Re-add last speaker"
 msgstr ""
 
+msgid "Re-count logged-in users"
+msgstr ""
+
 msgid "Reason"
 msgstr ""
 
@@ -3491,7 +3531,7 @@ msgstr ""
 msgid "Reset state"
 msgstr ""
 
-msgid "Reset to factory defaults"
+msgid "Reset to default settings"
 msgstr ""
 
 msgid "Reset your OpenSlides password"
@@ -3540,9 +3580,6 @@ msgid "Save all changes"
 msgstr ""
 
 msgid "Save editorial final version"
-msgstr ""
-
-msgid "Scan this QR code to connect to WLAN."
 msgstr ""
 
 msgid "Scan this QR code to open URL."
@@ -3695,13 +3732,13 @@ msgstr ""
 msgid "Set status for selected participants:"
 msgstr ""
 
+msgid "Set submission timestamp"
+msgstr ""
+
 msgid "Set submitters"
 msgstr ""
 
 msgid "Set tags"
-msgstr ""
-
-msgid "Set timestamp"
 msgstr ""
 
 msgid "Set workflow"
@@ -3898,6 +3935,9 @@ msgstr ""
 msgid "Staff"
 msgstr ""
 
+msgid "Start and end time must either both be set or both be empty"
+msgstr ""
+
 msgid "Start date"
 msgstr ""
 
@@ -4060,6 +4100,9 @@ msgstr ""
 msgid "The event manager has not set up a privacy policy yet."
 msgstr ""
 
+msgid "The fields are defined as follows"
+msgstr ""
+
 msgid "The file has too few columns to be parsed properly."
 msgstr ""
 
@@ -4068,6 +4111,22 @@ msgstr ""
 
 msgid ""
 "The file seems to have some ommitted columns. They will be considered empty."
+msgstr ""
+
+msgid ""
+"The import can not proceed. There is likely a problem with the import data, "
+"please check the preview for details."
+msgstr ""
+
+msgid ""
+"The import has failed due to recent changes on the server. Please check the "
+"updated preview before clicking on \"import\" again."
+msgstr ""
+
+msgid "The import is in progress, please wait ..."
+msgstr ""
+
+msgid "The import was successful."
 msgstr ""
 
 msgid "The input data for voting is invalid."
@@ -4103,11 +4162,6 @@ msgid "The process will be started. Please wait!"
 msgstr ""
 
 msgid "The request could not be sent. Check your connection."
-msgstr ""
-
-msgid ""
-"The sender address is defined in the OpenSlides server settings and should "
-"modified by administrator only."
 msgstr ""
 
 msgid "The server could not be reached."
@@ -4147,6 +4201,9 @@ msgstr ""
 msgid "There is an unknown voting problem."
 msgstr ""
 
+msgid "There is an unspecified error in this line, which prevents the import."
+msgstr ""
+
 msgid ""
 "There seems to be a problem connecting to our services. Check your "
 "connection or try again later."
@@ -4170,9 +4227,6 @@ msgstr ""
 msgid ""
 "This account is not linked as candidate, submitter or speaker in any meeting "
 "and is not manager of any committee"
-msgstr ""
-
-msgid "This account will only be removed from this meeting"
 msgstr ""
 
 msgid "This ballot contains deleted users."
@@ -4199,6 +4253,9 @@ msgstr ""
 msgid "This paragraph does not exist in the main motion anymore:"
 msgstr ""
 
+msgid "This participant will only be removed from this meeting"
+msgstr ""
+
 msgid "This prefix already exists"
 msgstr ""
 
@@ -4212,6 +4269,9 @@ msgid ""
 "This projector is currently internal. Selecting such projectors as reference "
 "projectors will automatically set them to visible. Do you really want to do "
 "this?"
+msgstr ""
+
+msgid "This row will not be imported, due to an unknown reason."
 msgstr ""
 
 msgid ""
@@ -4300,6 +4360,21 @@ msgstr ""
 msgid "Topics"
 msgstr ""
 
+msgid "Topics created"
+msgstr ""
+
+msgid "Topics skipped"
+msgstr ""
+
+msgid "Topics updated"
+msgstr ""
+
+msgid "Topics with warnings (will be skipped)"
+msgstr ""
+
+msgid "Total topics"
+msgstr ""
+
 msgid "Total votes cast"
 msgstr ""
 
@@ -4358,7 +4433,7 @@ msgid ""
 "The url referrs to the system url."
 msgstr ""
 
-msgid "Used for WLAN QRCode in PDF of access data."
+msgid "Used for WLAN QRCode projection."
 msgstr ""
 
 msgid "Used for invitation emails and QRCode in PDF of access data."
@@ -4391,6 +4466,9 @@ msgid "Virtual applause"
 msgstr ""
 
 msgid "Visibility"
+msgstr ""
+
+msgid "Visibility on agenda"
 msgstr ""
 
 msgid "Vote"
@@ -4476,9 +4554,6 @@ msgstr ""
 msgid "Votings"
 msgstr ""
 
-msgid "WLAN access data"
-msgstr ""
-
 msgid "WLAN encryption"
 msgstr ""
 
@@ -4519,6 +4594,15 @@ msgid "What is new?"
 msgstr ""
 
 msgid "Which version?"
+msgstr ""
+
+msgid "Wifi"
+msgstr ""
+
+msgid "Wifi access data"
+msgstr ""
+
+msgid "Wifi name"
 msgstr ""
 
 msgid ""
@@ -4741,9 +4825,6 @@ msgstr ""
 msgid "active"
 msgstr ""
 
-msgid "active users"
-msgstr ""
-
 msgid "add group(s)"
 msgstr ""
 
@@ -4891,7 +4972,13 @@ msgstr ""
 msgid "items selected"
 msgstr ""
 
+msgid "last updated"
+msgstr ""
+
 msgid "lightblue"
+msgstr ""
+
+msgid "logged-in users"
 msgstr ""
 
 msgid "long running"
